envoy-http-wasm.yaml
static_resources:
    listeners:
    address:
        socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
        - filters:
              - name: envoy.filters.network.http_connection_manager
            typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                name: local_routes
                virtual_hosts:
                    - name: local_service
                    domains:
                        - "*"
                    routes:
                        - match:
                          prefix: "/"
                        route:
                            cluster: httpbin
                http_filters:
                    - name: envoy.filters.http.wasm
                  typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                      config:
                          name: "rust_filter"
                          vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          code:
                              local:
                              filename: "/etc/envoy/proxy-wasm-plugins/rust_filter.wasm"
                - name: envoy.filters.http.router
                  typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
    clusters:
        - name: httpbin
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
          cluster_name: httpbin
          endpoints:
              - lb_endpoints:
              - endpoint:
                    address:
                    socket_address:
                        address: httpbin.org
                        port_value: 80
                    hostname: "httpbin.org"
